<resources>
    <string name="app_name">Keep Fit</string>
    <string name="title_home">Home</string>
    <string name="title_goals">Goals</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <string name="confirmation">Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="set">Set</string>
    <string name="name">Name</string>
    <string name="steps">Steps</string>
    <string name="steps_lowercase">&#160; steps</string>
    <string name="save_goal">Save Goal</string>

    <string name="edit_goal">Edit goal</string>
    <string name="edit_history">Edit history</string>
    <string name="goal_saved">Goal saved</string>
    <string name="goal_with_this_name_exists">Goal with this name already exists</string>

    <string name="delete_all_history" translatable="false">delete_all_history</string>
    <string name="auto_recording" translatable="false">auto_recording</string>
    <string name="notifications_enabled" translatable="false">notifications_enabled</string>
    <string name="goal_editing_enabled" translatable="false">goal_editing_enabled</string>
    <string name="history_editing_enabled" translatable="false">history_editing_enabled</string>

    <string name="goal_accomplished_channel_name">Goal accomplished channel</string>
    <string name="goal_half_reached_notification_title">Half way there to accomplish goal: &#160;</string>
    <string name="well_done">Well done!</string>

    <string name="toast_please_add_name">Please add name</string>
    <string name="toast_please_add_steps">Please add steps</string>

    <string name="alert_do_you_want_to_delete_this_goal">Do you want to delete this goal?</string>

    <string name="history_edit_mode_disabled">History edit mode is disabled</string>

    <string name="do_you_want_to_delete_this_days_entry">Do you want to delete this days entry?</string>
    <string name="history_entry_removed">History entry removed</string>

    <string name="goal_set">Goal set: &#160;</string>
    <string name="steps_added">&#160; steps added</string>

    <string name="goal_editing_disabled">Goal editing disabled</string>
    <string name="cannot_edit_active_goal">Cannot edit an active goal</string>
    <string name="cannot_delete_active_goal">Cannot delete an active goal</string>
    <string name="goal_removed">&#160; goal removed</string>

    <string name="are_you_sure_delete_all_history">Are you sure you want to delete all the history?</string>
    <string name="history_deleted">History deleted</string>

    <string name="select_goal">Select goal</string>
    <string name="goal_completed">&#160; goal completed!</string>
    <string name="half_way_there">Half way there!</string>
    <string name="percentage_completed">% completed!</string>
    <string name="add_steps">Add steps</string>
    <string name="steps_taken">Steps taken: &#160;</string>
    <string name="active">Active</string>
    <string name="goal_removed_toast">Goal removed</string>
    <string name="running_in_background">Running in the background</string>
</resources>
