<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="@string/notifications_enabled"
        app:title="Enable notifications" />
    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="@string/goal_editing_enabled"
        app:title="Enable goal editing" />
    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="@string/auto_recording"
        app:title="Record steps automatically" />
    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="@string/history_editing_enabled"
        app:title="Allow to edit history" />
    <Preference
        android:icon="@drawable/ic_delete_outline_24px"
        android:key="@string/delete_all_history"
        android:title="Delete all history" />
</PreferenceScreen>