<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_goals">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.stepcounter.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.example.stepcounter.ui.goals.GoalsFragment"
        android:label="@string/title_goals"
        tools:layout="@layout/fragment_goals" >
        <action
            android:id="@+id/action_navigation_goals_to_addGoalFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:destination="@id/addGoalFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.stepcounter.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.stepcounter.ui.settings.MySettingsFragment"
        android:label="@string/title_settings" />
    <fragment
        android:id="@+id/addGoalFragment"
        android:name="com.example.stepcounter.ui.goals.AddGoalFragment"
        android:label="Add Goal"
        tools:layout="@layout/add_goal_fragment" >
        <action
            android:id="@+id/action_addGoalFragment_to_navigation_goals"
            app:destination="@id/navigation_goals" />
    </fragment>
</navigation>